--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ Your browser does not support the video tag.
   <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/images/camp.jpg" alt>
   <br/>
   <br/>
-  <img src="https://1guitcd8ntb7gron6d6frog7bk79h4ls88ifoiltnru2nsa0v4k0.codecademy.cloud/resources/images/phone.png">
+  <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/images/phone.png">
   <h2>
   	Coming Soon for Iphone and Android
   </h2>
